--- a/index.html
+++ b/index.html
@@ -5,205 +5,199 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NicoPro2703 | Official Web</title>
     
-    <meta name="description" content="Portal oficial de NicoPro2703. Streamer, Creador de Contenido y Gamer.">
-    <meta name="author" content="NicoPro2703">
+    <meta name="description" content="Portal oficial de NicoPro2703. Streamer, Creador de Contenido y Gaming.">
     <link rel="icon" type="image/png" href="ninja-head-mascot-logo-for-esport-ninja-t-shirt-design-ninja-logo-ninja-sticker-vector.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&family=Outfit:wght@300;600&display=swap" rel="stylesheet">
 
     <style>
         :root {
-            --main-color: #ae00ff;
-            --second-color: #00d4ff;
-            --bg-dark: #0a0a0c;
+            --primary: #ae00ff;
+            --secondary: #00d4ff;
+            --glass: rgba(255, 255, 255, 0.03);
+            --border: rgba(255, 255, 255, 0.1);
         }
 
-        * { box-sizing: border-box; margin: 0; padding: 0; }
+        * { box-sizing: border-box; margin: 0; padding: 0; cursor: default; }
 
         body {
             font-family: 'Outfit', sans-serif;
-            background-color: var(--bg-dark);
+            background: #050505;
             color: white;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
             min-height: 100vh;
-            overflow-x: hidden;
+            overflow: hidden; /* Evita scroll innecesario */
         }
 
-        /* Fondo Animado de Estrellas */
-        .stars-container {
+        /* Fondo de Estrellas Animadas */
+        .background {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
             background: url('Sin título.jpg') no-repeat center center/cover;
             z-index: -2;
+            filter: brightness(0.4);
         }
 
-        .overlay-animated {
+        .animated-overlay {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: linear-gradient(45deg, rgba(10,10,12,0.9), rgba(174,0,255,0.1));
+            background: radial-gradient(circle at center, transparent 0%, #000 100%);
             z-index: -1;
         }
 
-        /* Contenedor Principal */
-        .profile-card {
+        /* Contenedor con Iluminación Neon */
+        .main-card {
             position: relative;
             z-index: 10;
-            max-width: 420px;
             width: 90%;
-            margin: 80px 0 40px;
-            padding: 40px 30px;
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            max-width: 440px;
+            padding: 50px 30px;
+            background: var(--glass);
+            backdrop-filter: blur(30px);
+            -webkit-backdrop-filter: blur(30px);
             border-radius: 40px;
-            backdrop-filter: blur(25px);
-            -webkit-backdrop-filter: blur(25px);
+            border: 1px solid var(--border);
             text-align: center;
-            box-shadow: 0 25px 45px rgba(0,0,0,0.5);
-            animation: slideUp 0.8s ease-out;
+            box-shadow: 0 0 40px rgba(0,0,0,0.8);
+            animation: fadeIn 1.2s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
-        @keyframes slideUp {
-            from { transform: translateY(50px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9) translateY(30px); }
+            to { opacity: 1; transform: scale(1) translateY(0); }
         }
 
-        /* Avatar con pulso */
-        .avatar-box {
+        /* Avatar Pro */
+        .profile-pic {
             position: relative;
             width: 140px;
             height: 140px;
-            margin: -110px auto 20px;
+            margin: -115px auto 25px;
         }
 
-        .avatar-box img {
+        .profile-pic img {
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            border: 4px solid var(--main-color);
+            border: 4px solid var(--primary);
             object-fit: cover;
-            background: var(--bg-dark);
-            box-shadow: 0 0 30px rgba(174, 0, 255, 0.5);
+            box-shadow: 0 0 30px var(--primary);
+            transition: 0.5s;
         }
 
-        .online-status {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            width: 22px;
-            height: 22px;
-            background: #00ff88;
-            border: 4px solid #141414;
-            border-radius: 50%;
-            box-shadow: 0 0 15px #00ff88;
+        .profile-pic:hover img {
+            transform: rotate(5deg) scale(1.05);
+            border-color: var(--secondary);
+            box-shadow: 0 0 30px var(--secondary);
         }
 
+        /* Tipografía */
         h1 {
             font-family: 'Syncopate', sans-serif;
-            font-size: 1.8rem;
+            font-size: 1.7rem;
+            letter-spacing: 4px;
+            margin-bottom: 5px;
+            color: #fff;
+            text-shadow: 0 0 10px var(--primary);
+        }
+
+        .tagline {
+            font-size: 0.8rem;
             text-transform: uppercase;
-            letter-spacing: 3px;
-            margin-bottom: 10px;
-            background: linear-gradient(to right, #fff, var(--main-color));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            letter-spacing: 5px;
+            color: var(--secondary);
+            margin-bottom: 35px;
+            font-weight: 600;
         }
 
-        .bio {
-            font-size: 0.9rem;
-            color: #ccc;
-            margin-bottom: 30px;
-            line-height: 1.6;
-        }
+        /* Links Estilo Cyberpunk */
+        .links { display: flex; flex-direction: column; gap: 15px; }
 
-        /* Botones Estilo E-Sports */
-        .links-grid { display: flex; flex-direction: column; gap: 15px; }
-
-        .link-item {
+        .btn {
+            position: relative;
             display: flex;
             align-items: center;
             justify-content: space-between;
             padding: 18px 25px;
             background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid var(--border);
             border-radius: 20px;
-            color: white;
+            color: #fff;
             text-decoration: none;
             font-weight: 600;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            overflow: hidden;
+            transition: 0.4s;
+            cursor: pointer;
         }
 
-        .link-item i { font-size: 1.4rem; color: var(--main-color); }
+        .btn i:first-child { font-size: 1.4rem; color: var(--primary); transition: 0.3s; }
 
-        .link-item:hover {
-            background: linear-gradient(90deg, rgba(174,0,255,0.2), rgba(0,212,255,0.1));
-            border-color: var(--main-color);
-            transform: scale(1.03) translateX(5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+        .btn:hover {
+            background: rgba(255, 255, 255, 0.1);
+            border-color: var(--secondary);
+            transform: translateX(8px);
         }
 
-        .link-item:hover i { color: white; transform: rotate(-10deg); }
+        .btn:hover i:first-child {
+            color: var(--secondary);
+            filter: drop-shadow(0 0 8px var(--secondary));
+        }
 
-        .footer-text {
-            margin-top: auto;
-            padding: 20px;
+        /* Footer */
+        .footer {
+            position: absolute;
+            bottom: -60px;
+            width: 100%;
             font-size: 0.7rem;
-            letter-spacing: 4px;
+            letter-spacing: 3px;
             opacity: 0.4;
-            text-transform: uppercase;
-        }
-
-        /* Responsive */
-        @media (max-width: 400px) {
-            h1 { font-size: 1.4rem; }
-            .profile-card { padding: 30px 20px; }
+            left: 0;
         }
     </style>
 </head>
 <body>
 
-    <div class="stars-container"></div>
-    <div class="overlay-animated"></div>
+    <div class="background"></div>
+    <div class="animated-overlay"></div>
 
-    <div class="profile-card">
-        <div class="avatar-box">
+    <div class="main-card">
+        <div class="profile-pic">
             <img src="ninja-head-mascot-logo-for-esport-ninja-t-shirt-design-ninja-logo-ninja-sticker-vector.jpg" alt="NicoPro2703">
-            <div class="online-status"></div>
         </div>
 
         <h1>NicoPro2703</h1>
-        <p class="bio">Streaming • Gaming • Community<br>Transformando el contenido digital cada día.</p>
+        <div class="tagline">Streaming Elite</div>
 
-        <nav class="links-grid">
-            <a href="https://youtube.com/@NicoPro2703" target="_blank" class="link-item">
-                <span><i class="fab fa-youtube"></i> YOUTUBE</span>
-                <i class="fas fa-chevron-right" style="font-size: 0.8rem; opacity: 0.5;"></i>
+        <div class="links">
+            <a href="https://youtube.com/@NicoPro2703" target="_blank" class="btn">
+                <span><i class="fab fa-youtube"></i> &nbsp; YOUTUBE</span>
+                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
             </a>
-            <a href="https://www.twitch.tv/nicopro2703_" target="_blank" class="link-item">
-                <span><i class="fab fa-twitch"></i> TWITCH</span>
-                <i class="fas fa-chevron-right" style="font-size: 0.8rem; opacity: 0.5;"></i>
+            <a href="https://www.twitch.tv/nicopro2703_" target="_blank" class="btn">
+                <span><i class="fab fa-twitch"></i> &nbsp; TWITCH</span>
+                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
             </a>
-            <a href="https://www.tiktok.com/@nicopro2703" target="_blank" class="link-item">
-                <span><i class="fab fa-tiktok"></i> TIKTOK</span>
-                <i class="fas fa-chevron-right" style="font-size: 0.8rem; opacity: 0.5;"></i>
+            <a href="https://www.tiktok.com/@nicopro2703" target="_blank" class="btn">
+                <span><i class="fab fa-tiktok"></i> &nbsp; TIKTOK</span>
+                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
             </a>
-            <a href="https://x.com/DiazCrespi1522" target="_blank" class="link-item">
-                <span><i class="fab fa-x-twitter"></i> TWITTER</span>
-                <i class="fas fa-chevron-right" style="font-size: 0.8rem; opacity: 0.5;"></i>
+            <a href="https://x.com/DiazCrespi1522" target="_blank" class="btn">
+                <span><i class="fab fa-x-twitter"></i> &nbsp; TWITTER</span>
+                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
             </a>
-            <a href="https://wa.me/668516659" target="_blank" class="link-item">
-                <span><i class="fab fa-whatsapp"></i> CONTACTO</span>
-                <i class="fas fa-chevron-right" style="font-size: 0.8rem; opacity: 0.5;"></i>
+            <a href="https://wa.me/668516659" target="_blank" class="btn">
+                <span><i class="fab fa-whatsapp"></i> &nbsp; WHATSAPP</span>
+                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
             </a>
-        </nav>
-    </div>
+        </div>
 
-    <div class="footer-text">
-        © 2026 NICOPRO2703 // DIGITAL CONTENT
+        <div class="footer">
+            &copy; 2026 NICOPRO2703 // DIGITAL LEGACY
+        </div>
     </div>
 
 </body>
 </html>
-
