--- a/index.html
+++ b/index.html
@@ -3,199 +3,242 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NicoPro2703 | Official Web</title>
+    <title>NicoPro2703 | Ultra Link</title>
     
-    <meta name="description" content="Portal oficial de NicoPro2703. Streamer, Creador de Contenido y Gaming.">
+    <meta name="description" content="NicoPro2703 Oficial - Streaming & Content.">
     <link rel="icon" type="image/png" href="ninja-head-mascot-logo-for-esport-ninja-t-shirt-design-ninja-logo-ninja-sticker-vector.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&family=Outfit:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
 
     <style>
         :root {
-            --primary: #ae00ff; /* Morado */
-            --secondary: #ff00c8; /* Rosa Brillante */
-            --glass: rgba(255, 255, 255, 0.03);
-            --border: rgba(255, 255, 255, 0.1);
+            --primary: #d500f9; /* Rosa Neón Intenso */
+            --secondary: #651fff; /* Morado Eléctrico */
+            --bg: #050505;
+            --glass: rgba(20, 20, 20, 0.6);
         }
 
-        * { box-sizing: border-box; margin: 0; padding: 0; cursor: default; }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
-            font-family: 'Outfit', sans-serif;
-            background: #050505;
+            background-color: var(--bg);
             color: white;
+            font-family: 'Rajdhani', sans-serif;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
             overflow: hidden;
+            perspective: 1000px; /* Clave para el 3D */
         }
 
-        /* Fondo de Estrellas Animadas */
-        .background {
+        /* Fondo Animado CSS Puro */
+        .bg-animation {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: url('Sin título.jpg') no-repeat center center/cover;
+            background: url('Sin título.jpg') center/cover no-repeat;
             z-index: -2;
-            filter: brightness(0.4);
+            filter: brightness(0.3);
+            transform: scale(1.1);
         }
 
-        .animated-overlay {
+        .particles {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle at center, transparent 0%, #000 100%);
+            background-image: 
+                radial-gradient(white 1px, transparent 1px),
+                radial-gradient(rgba(213, 0, 249, 0.5) 1px, transparent 1px);
+            background-size: 50px 50px;
+            opacity: 0.2;
             z-index: -1;
+            animation: moveParticles 20s linear infinite;
         }
 
-        /* Contenedor Principal con Iluminación Neon */
-        .main-card {
+        @keyframes moveParticles {
+            from { transform: translateY(0); }
+            to { transform: translateY(-50px); }
+        }
+
+        /* Tarjeta con Efecto Tilt 3D */
+        .card-container {
             position: relative;
-            z-index: 10;
             width: 90%;
-            max-width: 440px;
-            padding: 50px 30px;
+            max-width: 400px;
+            transform-style: preserve-3d; /* Importante para 3D */
+        }
+
+        .card {
             background: var(--glass);
-            backdrop-filter: blur(30px);
-            -webkit-backdrop-filter: blur(30px);
-            border-radius: 40px;
-            border: 1px solid var(--border);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid rgba(213, 0, 249, 0.3);
+            border-radius: 30px;
+            padding: 50px 30px;
             text-align: center;
-            box-shadow: 0 0 40px rgba(0,0,0,0.8);
-            animation: fadeIn 1.2s cubic-bezier(0.16, 1, 0.3, 1);
+            box-shadow: 
+                0 0 30px rgba(0,0,0,0.8),
+                inset 0 0 20px rgba(213, 0, 249, 0.1);
+            transition: transform 0.1s ease-out; /* Suaviza el movimiento */
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.9) translateY(30px); }
-            to { opacity: 1; transform: scale(1) translateY(0); }
-        }
-
-        /* Avatar Pro */
-        .profile-pic {
-            position: relative;
+        /* Avatar Brillante */
+        .avatar {
             width: 140px;
             height: 140px;
-            margin: -115px auto 25px;
+            margin: -100px auto 20px;
+            position: relative;
+            z-index: 2;
         }
 
-        .profile-pic img {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            border: 4px solid var(--primary);
+        .avatar img {
+            width: 100%; height: 100%;
             object-fit: cover;
-            box-shadow: 0 0 30px var(--primary);
-            transition: 0.5s;
+            border-radius: 50%;
+            border: 3px solid var(--primary);
+            box-shadow: 0 0 35px var(--primary);
+            transition: 0.3s;
         }
 
-        .profile-pic:hover img {
-            transform: rotate(5deg) scale(1.05);
-            border-color: var(--secondary);
-            box-shadow: 0 0 30px var(--secondary); /* Cambio a Rosa */
+        .avatar:hover img {
+            box-shadow: 0 0 50px var(--primary), 0 0 15px white;
+            transform: scale(1.05);
         }
 
-        /* Tipografía */
+        /* Texto Glitch (Efecto de fallo) */
         h1 {
-            font-family: 'Syncopate', sans-serif;
-            font-size: 1.7rem;
-            letter-spacing: 4px;
-            margin-bottom: 5px;
-            color: #fff;
-            text-shadow: 0 0 10px var(--primary);
-        }
-
-        .tagline {
-            font-size: 0.8rem;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 2rem;
             text-transform: uppercase;
-            letter-spacing: 5px;
-            color: var(--secondary); /* Cambio a Rosa */
-            margin-bottom: 35px;
-            font-weight: 600;
+            letter-spacing: 3px;
+            color: #fff;
+            position: relative;
+            display: inline-block;
+            margin-bottom: 5px;
+            text-shadow: 2px 2px var(--secondary);
         }
 
-        /* Links Estilo Cyberpunk */
-        .links { display: flex; flex-direction: column; gap: 15px; }
+        /* Subtítulo */
+        .role {
+            color: var(--primary);
+            font-weight: 700;
+            letter-spacing: 4px;
+            text-transform: uppercase;
+            font-size: 0.9rem;
+            margin-bottom: 35px;
+            text-shadow: 0 0 10px rgba(213, 0, 249, 0.6);
+        }
+
+        /* Botones Pro */
+        .links {
+            display: flex; flex-direction: column; gap: 15px;
+            transform: translateZ(30px); /* Los botones flotan sobre la tarjeta */
+        }
 
         .btn {
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 18px 25px;
+            display: flex; align-items: center; justify-content: space-between;
             background: rgba(255, 255, 255, 0.05);
-            border: 1px solid var(--border);
-            border-radius: 20px;
-            color: #fff;
+            padding: 18px 25px;
+            border-radius: 15px;
             text-decoration: none;
-            font-weight: 600;
+            color: white;
+            font-weight: 700;
+            font-size: 1.1rem;
+            border: 1px solid rgba(255,255,255,0.05);
+            transition: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+            position: relative;
             overflow: hidden;
-            transition: 0.4s;
-            cursor: pointer;
         }
 
-        .btn i:first-child { font-size: 1.4rem; color: var(--primary); transition: 0.3s; }
+        .btn i { font-size: 1.5rem; color: var(--primary); transition: 0.3s; }
 
+        /* Efecto Hover Rosa Explosivo */
         .btn:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: var(--secondary); /* Cambio a Rosa */
-            transform: translateX(8px);
+            background: rgba(213, 0, 249, 0.2);
+            border-color: var(--primary);
+            transform: scale(1.02) translateX(5px);
+            box-shadow: 0 0 20px rgba(213, 0, 249, 0.4);
         }
 
-        .btn:hover i:first-child {
-            color: var(--secondary); /* Cambio a Rosa */
-            filter: drop-shadow(0 0 8px var(--secondary));
-        }
+        .btn:hover i { color: white; filter: drop-shadow(0 0 5px white); }
 
-        /* Footer Actualizado */
+        /* Footer */
         .footer {
-            margin-top: 30px;
+            margin-top: 40px;
             font-size: 0.7rem;
-            letter-spacing: 3px;
-            opacity: 0.4;
-            text-transform: uppercase;
+            color: rgba(255,255,255,0.4);
+            letter-spacing: 2px;
+        }
+
+        /* Ajuste Móvil */
+        @media (max-width: 600px) {
+            .card-container { width: 95%; }
+            h1 { font-size: 1.6rem; }
         }
     </style>
 </head>
 <body>
 
-    <div class="background"></div>
-    <div class="animated-overlay"></div>
+    <div class="bg-animation"></div>
+    <div class="particles"></div>
 
-    <div class="main-card">
-        <div class="profile-pic">
-            <img src="ninja-head-mascot-logo-for-esport-ninja-t-shirt-design-ninja-logo-ninja-sticker-vector.jpg" alt="NicoPro2703">
-        </div>
+    <div class="card-container" id="tiltCard">
+        <div class="card">
+            <div class="avatar">
+                <img src="ninja-head-mascot-logo-for-esport-ninja-t-shirt-design-ninja-logo-ninja-sticker-vector.jpg" alt="NicoPro2703">
+            </div>
 
-        <h1>NicoPro2703</h1>
-        <div class="tagline">Streaming Elite</div>
+            <h1 data-text="NicoPro2703">NicoPro2703</h1>
+            <div class="role">Content Creator</div>
 
-        <div class="links">
-            <a href="https://youtube.com/@NicoPro2703" target="_blank" class="btn">
-                <span><i class="fab fa-youtube"></i> &nbsp; YOUTUBE</span>
-                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
-            </a>
-            <a href="https://www.twitch.tv/nicopro2703_" target="_blank" class="btn">
-                <span><i class="fab fa-twitch"></i> &nbsp; TWITCH</span>
-                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
-            </a>
-            <a href="https://www.tiktok.com/@nicopro2703" target="_blank" class="btn">
-                <span><i class="fab fa-tiktok"></i> &nbsp; TIKTOK</span>
-                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
-            </a>
-            <a href="https://x.com/DiazCrespi1522" target="_blank" class="btn">
-                <span><i class="fab fa-x-twitter"></i> &nbsp; TWITTER</span>
-                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
-            </a>
-            <a href="https://wa.me/668516659" target="_blank" class="btn">
-                <span><i class="fab fa-whatsapp"></i> &nbsp; WHATSAPP</span>
-                <i class="fas fa-external-link-alt" style="font-size: 0.7rem; opacity: 0.3;"></i>
-            </a>
-        </div>
+            <div class="links">
+                <a href="https://youtube.com/@NicoPro2703" target="_blank" class="btn">
+                    <span><i class="fab fa-youtube"></i> YouTube</span>
+                    <i class="fas fa-chevron-right" style="opacity:0.5; font-size:0.8rem"></i>
+                </a>
+                <a href="https://www.twitch.tv/nicopro2703_" target="_blank" class="btn">
+                    <span><i class="fab fa-twitch"></i> Twitch</span>
+                    <i class="fas fa-chevron-right" style="opacity:0.5; font-size:0.8rem"></i>
+                </a>
+                <a href="https://www.tiktok.com/@nicopro2703" target="_blank" class="btn">
+                    <span><i class="fab fa-tiktok"></i> TikTok</span>
+                    <i class="fas fa-chevron-right" style="opacity:0.5; font-size:0.8rem"></i>
+                </a>
+                <a href="https://x.com/DiazCrespi1522" target="_blank" class="btn">
+                    <span><i class="fab fa-x-twitter"></i> Twitter</span>
+                    <i class="fas fa-chevron-right" style="opacity:0.5; font-size:0.8rem"></i>
+                </a>
+                <a href="https://wa.me/668516659" target="_blank" class="btn">
+                    <span><i class="fab fa-whatsapp"></i> WhatsApp</span>
+                    <i class="fas fa-chevron-right" style="opacity:0.5; font-size:0.8rem"></i>
+                </a>
+            </div>
 
-        <div class="footer">
-            &copy; 2026 NICOPRO2703
+            <div class="footer">
+                &copy; 2026 NICOPRO2703
+            </div>
         </div>
     </div>
+
+    <script>
+        const card = document.getElementById('tiltCard');
+        const body = document.querySelector('body');
+
+        // Movimiento en PC
+        body.addEventListener('mousemove', (e) => {
+            let xAxis = (window.innerWidth / 2 - e.pageX) / 25;
+            let yAxis = (window.innerHeight / 2 - e.pageY) / 25;
+            card.style.transform = `rotateY(${xAxis}deg) rotateX(${yAxis}deg)`;
+        });
+
+        // Resetear al salir (opcional, para que vuelva al centro suave)
+        body.addEventListener('mouseleave', () => {
+            card.style.transform = `rotateY(0deg) rotateX(0deg)`;
+        });
+        
+        // Bloquear arrastre de imagen para que no moleste
+        document.querySelector('img').ondragstart = function() { return false; };
+    </script>
 
 </body>
 </html>
