--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
             perspective: 1000px;
         }
 
+        /* Fondo Limpio (Sin puntos) */
         .bg-animation {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
             background: url('Sin título.jpg') center/cover no-repeat;
             z-index: -2;
-            filter: brightness(0.25);
+            filter: brightness(0.25); /* Oscurecido para que resalte la tarjeta */
         }
 
         .card-container {
@@ -81,7 +82,6 @@
             text-shadow: 0 0 10px var(--secondary);
         }
 
-        /* AQUÍ ESTÁ EL CAMBIO DE TEXTO */
         .tagline {
             color: var(--primary);
             font-weight: 700;
@@ -165,6 +165,7 @@
     </div>
 
     <script>
+        // Efecto 3D de movimiento
         const card = document.getElementById('tiltCard');
         document.addEventListener('mousemove', (e) => {
             let xAxis = (window.innerWidth / 2 - e.pageX) / 30;
